// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/FormControl Basic 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0 9px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.12);
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-family: inherit;
  font-size: 1rem;
  height: 44px;
  max-width: 100%;
  min-width: 250px;
  outline: 1px solid gray;
  outline-color: transparent;
  position: relative;
  -webkit-tap-highlight-color: transparent;
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c1 input {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 0;
  color: currentColor;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  font-size: inherit;
  height: 100%;
  min-width: 0;
  opacity: 1;
  outline: none;
}

.c1 input *,
.c1 input *::before,
.c1 input *::after {
  box-sizing: border-box;
}

.c1 input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c1 input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c1 input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c1 input::placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c1:focus-within {
  border: 2px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.38);
  padding: 0 8px;
}

@supports selector(:-webkit-autofill) {
  .c1 input:-webkit-autofill,
  .c1 input:-webkit-autofill:hover,
  .c1 input:-webkit-autofill:focus,
  .c1 input:-webkit-autofill:active,
  .c1 input:-webkit-autofill::first-line {
    font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
    font-size: 1rem;
    -webkit-transition: background-color 1e9s ease-in-out 1e9s,color 1e9s ease-in-out 1e9s;
    transition: background-color 1e9s ease-in-out 1e9s,color 1e9s ease-in-out 1e9s;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <input
      aria-disabled={false}
      aria-errormessage={null}
      aria-invalid={false}
      aria-required={true}
      autoComplete="on"
      autoCorrect="off"
      autoFocus={false}
      disabled={false}
      id="form-control-basic-story"
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onInvalid={[Function]}
      required={true}
      type="email"
    />
  </div>
</div>
`;

exports[`Storyshots Components/FormControl With Browser Validation 1`] = `
.c7 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: inherit;
  display: block;
}

.c7 *,
.c7 *::before,
.c7 *::after {
  box-sizing: border-box;
}

.c14 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: rgba(0,0,0,0.6);
  display: block;
}

.c14 *,
.c14 *::before,
.c14 *::after {
  box-sizing: border-box;
}

.c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  max-width: 420px;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c19 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: rgba(0,0,0,0.87);
  display: block;
}

.c19 *,
.c19 *::before,
.c19 *::after {
  box-sizing: border-box;
}

.c26 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: 0;
  border-radius: 0;
  color: inherit;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 0;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
}

.c26 *,
.c26 *::before,
.c26 *::after {
  box-sizing: border-box;
}

.c26::-moz-focus-inner {
  border-style: none;
}

.c29 {
  font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
  font-size: 0.875rem;
  font-weight: 700;
  line-height: 1.2670625rem;
  text-transform: capitalize;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.30693750000000003rem);
  -ms-transform: translateY(0.30693750000000003rem);
  transform: translateY(0.30693750000000003rem);
  text-align: center;
}

.c29::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.713875rem;
}

.c8 {
  font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
  font-size: 1rem;
  font-weight: 700;
  line-height: 1.5195rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.3865rem);
  -ms-transform: translateY(0.3865rem);
  transform: translateY(0.3865rem);
  text-align: initial;
}

.c8::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.873rem;
}

.c11 {
  font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.2670625rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.30693750000000003rem);
  -ms-transform: translateY(0.30693750000000003rem);
  transform: translateY(0.30693750000000003rem);
  text-align: initial;
}

.c11::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.713875rem;
}

.c20 {
  font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
  font-size: 0.8125rem;
  font-weight: 700;
  line-height: 1.26584375rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.32965625rem);
  -ms-transform: translateY(0.32965625rem);
  transform: translateY(0.32965625rem);
  text-align: initial;
}

.c20::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.7593125rem;
}

.c15 {
  font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  line-height: 1.014625rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.227375rem);
  -ms-transform: translateY(0.227375rem);
  transform: translateY(0.227375rem);
  text-align: initial;
}

.c15::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.55475rem;
}

.c12 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: -0.017062500000000008rem;
}

.c12 *,
.c12 *::before,
.c12 *::after {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: -0.019500000000000003rem;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c9 *,
.c9 *::before,
.c9 *::after {
  box-sizing: border-box;
}

.c21 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: -0.015843750000000004rem;
}

.c21 *,
.c21 *::before,
.c21 *::after {
  box-sizing: border-box;
}

.c16 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: -0.014625000000000013rem;
}

.c16 *,
.c16 *::before,
.c16 *::after {
  box-sizing: border-box;
}

.c27 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  border-radius: 4px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  overflow: hidden;
  -webkit-transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  width: 100%;
  background-color: #009D00;
  box-shadow: 0 1px 4px rgba(0,0,0,0.16);
  color: rgba(255,255,255,1);
  height: 44px;
  padding: 0px 24px;
}

.c27 *,
.c27 *::before,
.c27 *::after {
  box-sizing: border-box;
}

.c27:hover {
  background-color: hsl(120,100%,24.6%);
}

.c27:active {
  box-shadow: none;
  -webkit-transform: scale(0.98);
  -ms-transform: scale(0.98);
  transform: scale(0.98);
}

.c28 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  visibility: visible;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: #FFFFFF;
  box-shadow: none;
  color: rgba(0,0,0,0.87);
  position: relative;
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0.87);
  bottom: 0;
  left: 0;
  opacity: 0;
  pointer-events: none;
  position: absolute;
  right: 0;
  top: 0;
}

.c3 *,
.c3 *::before,
.c3 *::after {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c4 *,
.c4 *::before,
.c4 *::after {
  box-sizing: border-box;
}

.c2 {
  border: 1px solid rgba(0,0,0,0.12);
  border-radius: 4px;
  overflow: hidden;
}

.c25 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 24px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c25 *,
.c25 *::before,
.c25 *::after {
  box-sizing: border-box;
}

.c25 > * {
  margin-left: 8px;
}

.c25 > :first-child {
  margin-left: 0;
}

.c10 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 16px 24px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c10 *,
.c10 *::before,
.c10 *::after {
  box-sizing: border-box;
}

.c10:first-child {
  padding-top: 32px;
}

.c10:last-child {
  padding-bottom: 32px;
}

.c10:only-child {
  padding-bottom: 32px;
  padding-top: 32px;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 32px 24px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  padding-bottom: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 *,
.c5 *::before,
.c5 *::after {
  box-sizing: border-box;
}

.c5:only-child {
  padding-bottom: 32px;
}

.c6 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  margin-top: -4px;
  overflow: hidden;
  padding: 4px 0px;
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c23 {
  display: inline-block;
  fill: currentColor;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 16px;
  height: 1em;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
}

.c17 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c17 *,
.c17 *::before,
.c17 *::after {
  box-sizing: border-box;
}

.c18 {
  margin-bottom: 8px;
}

.c22 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: #FFFFFF;
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  cursor: pointer;
  display: block;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-family: inherit;
  font-size: 1rem;
  height: 44px;
  max-width: 100%;
  min-width: 0;
  position: relative;
}

.c22 *,
.c22 *::before,
.c22 *::after {
  box-sizing: border-box;
}

.c22 select {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0 9px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 1px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.12);
  border-radius: 4px;
  color: rgba(0,0,0,0.38);
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  font-size: inherit;
  height: 44px;
  min-width: 0;
  outline: 1px solid gray;
  outline-color: transparent;
  padding-right: 37px;
  -webkit-tap-highlight-color: transparent;
  width: 100%;
}

.c22 select *,
.c22 select *::before,
.c22 select *::after {
  box-sizing: border-box;
}

.c22 select:-ms-expand {
  display: none;
}

.c22 select:focus {
  border: 2px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.38);
  outline: none;
  padding: 0 8px;
  padding-right: 36px;
}

.c24 {
  cursor: pointer;
  fill: currentColor;
  left: auto;
  pointer-events: none;
  position: absolute;
  right: 8px;
  top: 14px;
}

select:active + .c24 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c13 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: block;
  height: 16px;
}

.c13 *,
.c13 *::before,
.c13 *::after {
  box-sizing: border-box;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    />
    <div
      className="c4"
    >
      <form
        onSubmit={[Function]}
      >
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            <h2
              className="c7 c8"
            >
              <span
                className="c9"
              >
                Using Browser Validation
              </span>
            </h2>
          </div>
        </div>
        <div
          className="c10"
        >
          <p
            className="c7 c11"
          >
            <span
              className="c12"
            >
              You can use FormControl with built-in HTML validation. Just set formNoValidate=false on your form control components. Try submitting the form below.
            </span>
          </p>
          <div
            className="c13"
          />
          <p
            className="c14 c15"
          >
            <span
              className="c16"
            >
              Note: Many form components set noValidate=true. Make sure it is also set to false on your form.
            </span>
          </p>
        </div>
        <div
          className="c10"
        >
          <div
            className="c17"
          >
            <div
              className="c18"
            >
              <label
                className="c19 c20"
                htmlFor="planType"
                id="planType-label"
              >
                <span
                  className="c21"
                >
                  Plan Type
                </span>
              </label>
            </div>
            <div
              className="c22"
            >
              <select
                aria-disabled={false}
                aria-errormessage={null}
                aria-invalid={false}
                aria-labelledby="planType-label"
                aria-required={true}
                autoComplete="on"
                autoFocus={false}
                defaultValue=""
                disabled={false}
                formNoValidate={false}
                id="planType"
                multiple={false}
                name="planType"
                onBlur={[Function]}
                onChange={[Function]}
                onInvalid={[Function]}
                required={true}
              >
                <option
                  value=""
                >
                  -- select a plan --
                </option>
                <option
                  value={1}
                >
                  Free
                </option>
                <option
                  value={2}
                >
                  Pro ($0.99/month)
                </option>
              </select>
              <svg
                aria-hidden={true}
                className="c23 c24"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0 24 0 24 24 0 24"
                  fill="none"
                />
                <path
                  d="M7.41 8.84 12 13.42 16.59 8.84 18 10.25 12 16.25 6 10.25"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          className="c25"
        >
          <button
            aria-busy={false}
            className="c26 c27"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            type="submit"
          >
            <div
              className="c28"
            >
              <span
                className="c7 c29"
              >
                <span
                  className="c12"
                >
                  Save Changes
                </span>
              </span>
            </div>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/FormControl With Caption 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  max-width: 320px;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c7 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: rgba(0,0,0,0.38);
  display: block;
}

.c7 *,
.c7 *::before,
.c7 *::after {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: 0;
  border-radius: 0;
  color: inherit;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 0;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
}

.c4 *,
.c4 *::before,
.c4 *::after {
  box-sizing: border-box;
}

.c4::-moz-focus-inner {
  border-style: none;
}

.c8 {
  font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  line-height: 1.014625rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.227375rem);
  -ms-transform: translateY(0.227375rem);
  transform: translateY(0.227375rem);
  text-align: initial;
}

.c8::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.55475rem;
}

.c9 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: -0.014625000000000013rem;
}

.c9 *,
.c9 *::before,
.c9 *::after {
  box-sizing: border-box;
}

.c5 {
  display: inline-block;
  fill: currentColor;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 16px;
  height: 1em;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c6 {
  margin-top: 8px;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0 9px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.12);
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  cursor: text;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-family: inherit;
  font-size: 1rem;
  height: 44px;
  max-width: 100%;
  min-width: 0;
  outline: 1px solid gray;
  outline-color: transparent;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  width: 100%;
}

.c2 *,
.c2 *::before,
.c2 *::after {
  box-sizing: border-box;
}

.c2 input {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 0;
  color: currentColor;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  font-size: inherit;
  height: 100%;
  min-width: 0;
  opacity: 1;
  outline: none;
}

.c2 input *,
.c2 input *::before,
.c2 input *::after {
  box-sizing: border-box;
}

.c2 input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c2 input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c2 input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c2 input::placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c2:focus-within {
  border: 2px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.38);
  padding: 0 8px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@supports selector(:-webkit-autofill) {
  .c2 input:-webkit-autofill,
  .c2 input:-webkit-autofill:hover,
  .c2 input:-webkit-autofill:focus,
  .c2 input:-webkit-autofill:active,
  .c2 input:-webkit-autofill::first-line {
    font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
    font-size: 1rem;
    -webkit-transition: background-color 1e9s ease-in-out 1e9s,color 1e9s ease-in-out 1e9s;
    transition: background-color 1e9s ease-in-out 1e9s,color 1e9s ease-in-out 1e9s;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <input
        aria-describedby="form-control-with-caption-caption"
        aria-disabled={false}
        aria-errormessage={null}
        aria-invalid={false}
        aria-required={true}
        autoComplete="new-password"
        autoCorrect="off"
        autoFocus={false}
        disabled={false}
        id="form-control-with-caption"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onInvalid={[Function]}
        required={true}
        type="password"
      />
      <div
        className="c3"
      >
        <button
          aria-label="Show password text"
          className="c4 "
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="c5"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="c6"
    >
      <span
        className="c7 c8"
        id="form-control-with-caption-caption"
      >
        <span
          className="c9"
        >
          Your password must contain 1 uppercase letter, 1 number, and 1 special character
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/FormControl With Custom Markup 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  max-width: 320px;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: rgba(0,0,0,0.38);
  display: block;
}

.c9 *,
.c9 *::before,
.c9 *::after {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: rgba(0,0,0,0.87);
  display: block;
}

.c3 *,
.c3 *::before,
.c3 *::after {
  box-sizing: border-box;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  color: #0E24C4;
  background-color: inherit;
}

.c6 *,
.c6 *::before,
.c6 *::after {
  box-sizing: border-box;
}

.c12 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  border-radius: 4px;
  background-color: #E7EAFE;
  color: rgba(8,22,122,1);
  padding: 8px;
}

.c12 *,
.c12 *::before,
.c12 *::after {
  box-sizing: border-box;
}

.c4 {
  font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
  font-size: 0.8125rem;
  font-weight: 700;
  line-height: 1.26584375rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.32965625rem);
  -ms-transform: translateY(0.32965625rem);
  transform: translateY(0.32965625rem);
  text-align: initial;
}

.c4::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.7593125rem;
}

.c10 {
  font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  line-height: 1.014625rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.227375rem);
  -ms-transform: translateY(0.227375rem);
  transform: translateY(0.227375rem);
  text-align: initial;
}

.c10::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.55475rem;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: -0.015843750000000004rem;
}

.c5 *,
.c5 *::before,
.c5 *::after {
  box-sizing: border-box;
}

.c11 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: -0.014625000000000013rem;
}

.c11 *,
.c11 *::before,
.c11 *::after {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c8 {
  margin-top: 8px;
}

.c2 {
  margin-bottom: 8px;
}

.c7 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0 9px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.12);
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  cursor: text;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-family: inherit;
  font-size: 1rem;
  height: 44px;
  max-width: 100%;
  min-width: 0;
  outline: 1px solid gray;
  outline-color: transparent;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  width: 100%;
}

.c7 *,
.c7 *::before,
.c7 *::after {
  box-sizing: border-box;
}

.c7 input {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 0;
  color: currentColor;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  font-size: inherit;
  height: 100%;
  min-width: 0;
  opacity: 1;
  outline: none;
}

.c7 input *,
.c7 input *::before,
.c7 input *::after {
  box-sizing: border-box;
}

.c7 input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c7 input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c7 input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c7 input::placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c7:focus-within {
  border: 2px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.38);
  padding: 0 8px;
}

@supports selector(:-webkit-autofill) {
  .c7 input:-webkit-autofill,
  .c7 input:-webkit-autofill:hover,
  .c7 input:-webkit-autofill:focus,
  .c7 input:-webkit-autofill:active,
  .c7 input:-webkit-autofill::first-line {
    font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
    font-size: 1rem;
    -webkit-transition: background-color 1e9s ease-in-out 1e9s,color 1e9s ease-in-out 1e9s;
    transition: background-color 1e9s ease-in-out 1e9s,color 1e9s ease-in-out 1e9s;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <label
        className="c3 c4"
        htmlFor="firstname"
        id="firstname-label"
      >
        <span
          className="c5"
        >
          <div
            className="c6"
          >
            Name
          </div>
        </span>
      </label>
    </div>
    <div
      className="c7"
    >
      <input
        aria-describedby="firstname-caption"
        aria-disabled={false}
        aria-errormessage={null}
        aria-invalid={false}
        aria-labelledby="firstname-label"
        aria-required={true}
        autoComplete="on"
        autoCorrect="off"
        autoFocus={false}
        disabled={false}
        id="firstname"
        name="firstname"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onInvalid={[Function]}
        required={true}
        type="text"
      />
    </div>
    <div
      className="c8"
    >
      <span
        className="c9 c10"
        id="firstname-caption"
      >
        <span
          className="c11"
        >
          <div
            className="c12"
          >
            Provide your first and last name
          </div>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/FormControl With Disabled 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  max-width: 320px;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0 9px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(0,0,0,0.12);
  border: 1px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.12);
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  cursor: not-allowed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-family: inherit;
  font-size: 1rem;
  height: 44px;
  max-width: 100%;
  min-width: 0;
  outline: 1px solid gray;
  outline-color: transparent;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  opacity: 0.5;
  width: 100%;
}

.c2 *,
.c2 *::before,
.c2 *::after {
  box-sizing: border-box;
}

.c2 input {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 0;
  color: currentColor;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  font-size: inherit;
  height: 100%;
  min-width: 0;
  opacity: 1;
  outline: none;
}

.c2 input *,
.c2 input *::before,
.c2 input *::after {
  box-sizing: border-box;
}

.c2 input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c2 input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c2 input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c2 input::placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c2:focus-within {
  border: 2px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.38);
  padding: 0 8px;
}

@supports selector(:-webkit-autofill) {
  .c2 input:-webkit-autofill,
  .c2 input:-webkit-autofill:hover,
  .c2 input:-webkit-autofill:focus,
  .c2 input:-webkit-autofill:active,
  .c2 input:-webkit-autofill::first-line {
    font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
    font-size: 1rem;
    -webkit-transition: background-color 1e9s ease-in-out 1e9s,color 1e9s ease-in-out 1e9s;
    transition: background-color 1e9s ease-in-out 1e9s,color 1e9s ease-in-out 1e9s;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <input
        aria-disabled={true}
        aria-errormessage={null}
        aria-invalid={false}
        aria-required={true}
        autoComplete="on"
        autoCorrect="off"
        autoFocus={false}
        disabled={true}
        id="form-control-with-disabled"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onInvalid={[Function]}
        placeholder="Disabled input"
        required={true}
        tabIndex={-1}
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/FormControl With Error 1`] = `
.c11 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: inherit;
  display: block;
}

.c11 *,
.c11 *::before,
.c11 *::after {
  box-sizing: border-box;
}

.c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  max-width: 320px;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  margin-top: 8px;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c6 *,
.c6 *::before,
.c6 *::after {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: 0;
  border-radius: 0;
  color: inherit;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 0;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
}

.c4 *,
.c4 *::before,
.c4 *::after {
  box-sizing: border-box;
}

.c4::-moz-focus-inner {
  border-style: none;
}

.c12 {
  font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  line-height: 1.014625rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.227375rem);
  -ms-transform: translateY(0.227375rem);
  transform: translateY(0.227375rem);
  text-align: initial;
}

.c12::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.55475rem;
}

.c13 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: -0.014625000000000013rem;
}

.c13 *,
.c13 *::before,
.c13 *::after {
  box-sizing: border-box;
}

.c5 {
  display: inline-block;
  fill: currentColor;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 16px;
  height: 1em;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
}

.c8 {
  display: inline-block;
  fill: currentColor;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 1rem;
  height: 1em;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
}

.c7 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 12px 8px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFE5E5;
  border-radius: 4px;
  color: rgba(148,0,17,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 *,
.c7 *::before,
.c7 *::after {
  box-sizing: border-box;
}

.c9 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-bottom: auto;
  margin-right: 8px;
}

.c10 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 3px 0;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0 9px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid rgba(0,0,0,0.12);
  border-color: #F03D3D;
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  cursor: text;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-family: inherit;
  font-size: 1rem;
  height: 44px;
  max-width: 100%;
  min-width: 0;
  outline: 1px solid gray;
  outline-color: transparent;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  width: 100%;
}

.c2 *,
.c2 *::before,
.c2 *::after {
  box-sizing: border-box;
}

.c2 input {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 0;
  color: currentColor;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  font-size: inherit;
  height: 100%;
  min-width: 0;
  opacity: 1;
  outline: none;
}

.c2 input *,
.c2 input *::before,
.c2 input *::after {
  box-sizing: border-box;
}

.c2 input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c2 input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c2 input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c2 input::placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c2:focus-within {
  border: 2px solid rgba(0,0,0,0.12);
  border-color: #F03D3D;
  padding: 0 8px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@supports selector(:-webkit-autofill) {
  .c2 input:-webkit-autofill,
  .c2 input:-webkit-autofill:hover,
  .c2 input:-webkit-autofill:focus,
  .c2 input:-webkit-autofill:active,
  .c2 input:-webkit-autofill::first-line {
    font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
    font-size: 1rem;
    -webkit-transition: background-color 1e9s ease-in-out 1e9s,color 1e9s ease-in-out 1e9s;
    transition: background-color 1e9s ease-in-out 1e9s,color 1e9s ease-in-out 1e9s;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <input
        aria-describedby="form-control-with-error-error"
        aria-disabled={false}
        aria-errormessage="form-control-with-error-error"
        aria-invalid={true}
        aria-required={true}
        autoComplete="new-password"
        autoCorrect="off"
        autoFocus={false}
        disabled={false}
        id="form-control-with-error"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onInvalid={[Function]}
        required={true}
        type="password"
      />
      <div
        className="c3"
      >
        <button
          aria-label="Show password text"
          className="c4 "
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="c5"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="c6"
    >
      <div
        className="c7"
        role="alert"
      >
        <svg
          aria-hidden={true}
          className="c8 c9"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
          />
        </svg>
        <div
          className="c10"
        >
          <span
            className="c11 c12"
            id="form-control-with-error-error"
          >
            <span
              className="c13"
            >
              Your password must contain 1 uppercase letter, 1 number, and 1 special character
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/FormControl With JS Validation 1`] = `
.c7 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: inherit;
  display: block;
}

.c7 *,
.c7 *::before,
.c7 *::after {
  box-sizing: border-box;
}

.c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  max-width: 420px;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c24 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: rgba(0,0,0,0.38);
  display: block;
}

.c24 *,
.c24 *::before,
.c24 *::after {
  box-sizing: border-box;
}

.c15 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: rgba(0,0,0,0.87);
  display: block;
}

.c15 *,
.c15 *::before,
.c15 *::after {
  box-sizing: border-box;
}

.c21 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: 0;
  border-radius: 0;
  color: inherit;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 0;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
}

.c21 *,
.c21 *::before,
.c21 *::after {
  box-sizing: border-box;
}

.c21::-moz-focus-inner {
  border-style: none;
}

.c43 {
  font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
  font-size: 0.875rem;
  font-weight: 700;
  line-height: 1.2670625rem;
  text-transform: capitalize;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.30693750000000003rem);
  -ms-transform: translateY(0.30693750000000003rem);
  transform: translateY(0.30693750000000003rem);
  text-align: center;
}

.c43::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.713875rem;
}

.c8 {
  font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
  font-size: 1rem;
  font-weight: 700;
  line-height: 1.5195rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.3865rem);
  -ms-transform: translateY(0.3865rem);
  transform: translateY(0.3865rem);
  text-align: initial;
}

.c8::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.873rem;
}

.c11 {
  font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.2670625rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.30693750000000003rem);
  -ms-transform: translateY(0.30693750000000003rem);
  transform: translateY(0.30693750000000003rem);
  text-align: initial;
}

.c11::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.713875rem;
}

.c16 {
  font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
  font-size: 0.8125rem;
  font-weight: 700;
  line-height: 1.26584375rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.32965625rem);
  -ms-transform: translateY(0.32965625rem);
  transform: translateY(0.32965625rem);
  text-align: initial;
}

.c16::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.7593125rem;
}

.c36 {
  font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
  font-size: 0.875rem;
  line-height: 1.2670625rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.30693750000000003rem);
  -ms-transform: translateY(0.30693750000000003rem);
  transform: translateY(0.30693750000000003rem);
  font-weight: 700;
  text-align: initial;
}

.c36::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.713875rem;
}

.c25 {
  font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  line-height: 1.014625rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.227375rem);
  -ms-transform: translateY(0.227375rem);
  transform: translateY(0.227375rem);
  text-align: initial;
}

.c25::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.55475rem;
}

.c12 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: -0.017062500000000008rem;
}

.c12 *,
.c12 *::before,
.c12 *::after {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: -0.019500000000000003rem;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c9 *,
.c9 *::before,
.c9 *::after {
  box-sizing: border-box;
}

.c37 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: -0.017062500000000008rem;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c37 *,
.c37 *::before,
.c37 *::after {
  box-sizing: border-box;
}

.c17 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: -0.015843750000000004rem;
}

.c17 *,
.c17 *::before,
.c17 *::after {
  box-sizing: border-box;
}

.c26 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: -0.014625000000000013rem;
}

.c26 *,
.c26 *::before,
.c26 *::after {
  box-sizing: border-box;
}

.c41 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  border-radius: 4px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  overflow: hidden;
  -webkit-transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  width: 100%;
  background-color: #009D00;
  box-shadow: 0 1px 4px rgba(0,0,0,0.16);
  color: rgba(255,255,255,1);
  height: 44px;
  padding: 0px 24px;
}

.c41 *,
.c41 *::before,
.c41 *::after {
  box-sizing: border-box;
}

.c41:hover {
  background-color: hsl(120,100%,24.6%);
}

.c41:active {
  box-shadow: none;
  -webkit-transform: scale(0.98);
  -ms-transform: scale(0.98);
  transform: scale(0.98);
}

.c42 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  visibility: visible;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: #FFFFFF;
  box-shadow: none;
  color: rgba(0,0,0,0.87);
  position: relative;
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0.87);
  bottom: 0;
  left: 0;
  opacity: 0;
  pointer-events: none;
  position: absolute;
  right: 0;
  top: 0;
}

.c3 *,
.c3 *::before,
.c3 *::after {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c4 *,
.c4 *::before,
.c4 *::after {
  box-sizing: border-box;
}

.c2 {
  border: 1px solid rgba(0,0,0,0.12);
  border-radius: 4px;
  overflow: hidden;
}

.c40 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 24px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c40 *,
.c40 *::before,
.c40 *::after {
  box-sizing: border-box;
}

.c40 > * {
  margin-left: 8px;
}

.c40 > :first-child {
  margin-left: 0;
}

.c10 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 16px 24px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c10 *,
.c10 *::before,
.c10 *::after {
  box-sizing: border-box;
}

.c10:first-child {
  padding-top: 32px;
}

.c10:last-child {
  padding-bottom: 32px;
}

.c10:only-child {
  padding-bottom: 32px;
  padding-top: 32px;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 32px 24px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  padding-bottom: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 *,
.c5 *::before,
.c5 *::after {
  box-sizing: border-box;
}

.c5:only-child {
  padding-bottom: 32px;
}

.c6 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  margin-top: -4px;
  overflow: hidden;
  padding: 4px 0px;
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c22 {
  display: inline-block;
  fill: currentColor;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 16px;
  height: 1em;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
}

.c13 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c13 *,
.c13 *::before,
.c13 *::after {
  box-sizing: border-box;
}

.c23 {
  margin-top: 8px;
}

.c14 {
  margin-bottom: 8px;
}

.c18 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0 9px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.12);
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  cursor: text;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-family: inherit;
  font-size: 1rem;
  height: 44px;
  max-width: 100%;
  min-width: 0;
  outline: 1px solid gray;
  outline-color: transparent;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  width: 100%;
}

.c18 *,
.c18 *::before,
.c18 *::after {
  box-sizing: border-box;
}

.c18 input {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 0;
  color: currentColor;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  font-size: inherit;
  height: 100%;
  min-width: 0;
  opacity: 1;
  outline: none;
}

.c18 input *,
.c18 input *::before,
.c18 input *::after {
  box-sizing: border-box;
}

.c18 input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c18 input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c18 input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c18 input::placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c18:focus-within {
  border: 2px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.38);
  padding: 0 8px;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c31 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: transparent;
  display: grid;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  grid-template-areas: "input label" "input description";
  grid-template-columns: 18px auto;
  grid-template-rows: 18px auto;
  min-height: 36px;
  position: relative;
}

.c31 *,
.c31 *::before,
.c31 *::after {
  box-sizing: border-box;
}

.c33 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  grid-area: input;
  height: 18px;
  position: relative;
  width: 18px;
}

.c33 input[type=radio] {
  cursor: pointer;
  font-size: 1rem;
  grid-area: input;
  height: 18px;
  margin: 0;
  opacity: 0;
  width: 18px;
  z-index: 1;
}

.c33 input[type=radio][disabled] {
  cursor: not-allowed;
}

.c34 {
  background-color: transparent;
  border: 2px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.6);
  border-radius: 100%;
  cursor: pointer;
  height: 18px;
  left: 0;
  pointer-events: none;
  position: absolute;
  right: 0;
  top: calc((100% - 18px) / 2);
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: all 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  width: 18px;
}

.c32:hover .c34 {
  border-color: rgba(0,0,0,0.87);
}

input[type=radio]:checked + .c34 {
  border-color: rgba(0,0,0,0.87);
  border-width: 6px;
}

.c35 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: label;
  height: 100%;
  overflow: hidden;
  padding-left: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-tap-highlight-color: transparent;
}

.c38 {
  grid-area: description;
  margin-top: 8px;
  padding-left: 8px;
}

.c29 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  border: 1px solid rgba(0,0,0,0.12);
  border-radius: 4px;
}

.c29 *,
.c29 *::before,
.c29 *::after {
  box-sizing: border-box;
}

.c30 {
  padding: 16px;
}

.c39 {
  padding: 16px;
  border-top: 1px solid rgba(0,0,0,0.12);
  border-top-color: rgba(0,0,0,0.12);
}

.c27 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: #FFFFFF;
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  cursor: pointer;
  display: block;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-family: inherit;
  font-size: 1rem;
  height: 44px;
  max-width: 100%;
  min-width: 0;
  position: relative;
}

.c27 *,
.c27 *::before,
.c27 *::after {
  box-sizing: border-box;
}

.c27 select {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0 9px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 1px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.12);
  border-radius: 4px;
  color: currentColor;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  font-size: inherit;
  height: 44px;
  min-width: 0;
  outline: 1px solid gray;
  outline-color: transparent;
  padding-right: 37px;
  -webkit-tap-highlight-color: transparent;
  width: 100%;
}

.c27 select *,
.c27 select *::before,
.c27 select *::after {
  box-sizing: border-box;
}

.c27 select:-ms-expand {
  display: none;
}

.c27 select:focus {
  border: 2px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.38);
  outline: none;
  padding: 0 8px;
  padding-right: 36px;
}

.c28 {
  cursor: pointer;
  fill: currentColor;
  left: auto;
  pointer-events: none;
  position: absolute;
  right: 8px;
  top: 14px;
}

select:active + .c28 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c19 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: block;
  height: 24px;
}

.c19 *,
.c19 *::before,
.c19 *::after {
  box-sizing: border-box;
}

@supports selector(:-webkit-autofill) {
  .c18 input:-webkit-autofill,
  .c18 input:-webkit-autofill:hover,
  .c18 input:-webkit-autofill:focus,
  .c18 input:-webkit-autofill:active,
  .c18 input:-webkit-autofill::first-line {
    font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
    font-size: 1rem;
    -webkit-transition: background-color 1e9s ease-in-out 1e9s,color 1e9s ease-in-out 1e9s;
    transition: background-color 1e9s ease-in-out 1e9s,color 1e9s ease-in-out 1e9s;
  }
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    />
    <div
      className="c4"
    >
      <form
        noValidate={true}
        onSubmit={[Function]}
      >
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            <h2
              className="c7 c8"
            >
              <span
                className="c9"
              >
                Using JavaScript Validation
              </span>
            </h2>
          </div>
        </div>
        <div
          className="c10"
        >
          <p
            className="c7 c11"
          >
            <span
              className="c12"
            >
              In this example, a FormControl is used with various form controls, like Input, Select, and Radio. This example illustrates a realistic use case for FormControl. It uses react-hook-form to manage state and provide error validation.
            </span>
          </p>
        </div>
        <div
          className="c10"
        >
          <div
            className="c13"
          >
            <div
              className="c14"
            >
              <label
                className="c15 c16"
                htmlFor="email"
                id="email-label"
              >
                <span
                  className="c17"
                >
                  Email
                </span>
              </label>
            </div>
            <div
              className="c18"
            >
              <input
                aria-disabled={false}
                aria-errormessage={null}
                aria-invalid={false}
                aria-labelledby="email-label"
                aria-required={true}
                autoComplete="on"
                autoCorrect="off"
                autoFocus={false}
                disabled={false}
                id="email"
                name="email"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInvalid={[Function]}
                required={true}
                type="email"
              />
            </div>
          </div>
          <div
            className="c19"
          />
          <div
            className="c13"
          >
            <div
              className="c14"
            >
              <label
                className="c15 c16"
                htmlFor="password"
                id="password-label"
              >
                <span
                  className="c17"
                >
                  Password
                </span>
              </label>
            </div>
            <div
              className="c18"
            >
              <input
                aria-describedby="password-caption"
                aria-disabled={false}
                aria-errormessage={null}
                aria-invalid={false}
                aria-labelledby="password-label"
                aria-required={true}
                autoComplete="new-password"
                autoCorrect="off"
                autoFocus={false}
                disabled={false}
                id="password"
                name="password"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInvalid={[Function]}
                required={true}
                type="password"
              />
              <div
                className="c20"
              >
                <button
                  aria-label="Show password text"
                  className="c21 "
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  type="button"
                >
                  <svg
                    aria-hidden={true}
                    className="c22"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              className="c23"
            >
              <span
                className="c24 c25"
                id="password-caption"
              >
                <span
                  className="c26"
                >
                  Choose a password with 1 number and 8 or more characters
                </span>
              </span>
            </div>
          </div>
          <div
            className="c19"
          />
          <div
            className="c13"
          >
            <div
              className="c14"
            >
              <label
                className="c15 c16"
                htmlFor="country"
                id="country-label"
              >
                <span
                  className="c17"
                >
                  Country
                </span>
              </label>
            </div>
            <div
              className="c27"
            >
              <select
                aria-disabled={false}
                aria-errormessage={null}
                aria-invalid={false}
                aria-labelledby="country-label"
                aria-required={true}
                autoComplete="on"
                autoFocus={false}
                defaultValue="us"
                disabled={false}
                formNoValidate={true}
                id="country"
                multiple={false}
                name="country"
                onBlur={[Function]}
                onChange={[Function]}
                onInvalid={[Function]}
                required={true}
              >
                <option
                  value="ca"
                >
                  Canada
                </option>
                <option
                  value="mx"
                >
                  Mexico
                </option>
                <option
                  value="us"
                >
                  United States
                </option>
              </select>
              <svg
                aria-hidden={true}
                className="c22 c28"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0 24 0 24 24 0 24"
                  fill="none"
                />
                <path
                  d="M7.41 8.84 12 13.42 16.59 8.84 18 10.25 12 16.25 6 10.25"
                />
              </svg>
            </div>
          </div>
          <div
            className="c19"
          />
          <div
            className="c13"
          >
            <div
              className="c14"
            >
              <label
                className="c15 c16"
                htmlFor="planType"
                id="planType-label"
              >
                <span
                  className="c17"
                >
                  Choose a Plan
                </span>
              </label>
            </div>
            <div
              aria-disabled={false}
              aria-errormessage={null}
              aria-invalid={false}
              aria-labelledby="planType-label"
              aria-required={true}
              className="c29"
              id="planType"
              role="radiogroup"
            >
              <div
                className="c30"
              >
                <div
                  className="c31"
                  onInput={[Function]}
                >
                  <div
                    className="c32 c33"
                  >
                    <input
                      aria-describedby="free-description"
                      aria-disabled={false}
                      aria-invalid={false}
                      aria-labelledby="free-label"
                      aria-required={true}
                      autoComplete="on"
                      autoFocus={false}
                      defaultChecked={true}
                      disabled={false}
                      id="free"
                      name="planType"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInvalid={[Function]}
                      required={true}
                      role="radio"
                      type="radio"
                      value={0}
                    />
                    <span
                      aria-hidden="true"
                      className="c34"
                    />
                  </div>
                  <label
                    className="c35"
                    htmlFor="free"
                    id="free-label"
                  >
                    <span
                      className="c7 c36"
                    >
                      <span
                        className="c37"
                      >
                        Free
                      </span>
                    </span>
                  </label>
                  <div
                    className="c15 c25 c38"
                    id="free-description"
                  >
                    <span
                      className="c26"
                    >
                      Use an ad-supported version of the ACME app
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="c39"
              >
                <div
                  className="c31"
                  onInput={[Function]}
                >
                  <div
                    className="c32 c33"
                  >
                    <input
                      aria-describedby="paid-description"
                      aria-disabled={false}
                      aria-invalid={false}
                      aria-labelledby="paid-label"
                      aria-required={true}
                      autoComplete="on"
                      autoFocus={false}
                      defaultChecked={false}
                      disabled={false}
                      id="paid"
                      name="planType"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInvalid={[Function]}
                      required={true}
                      role="radio"
                      type="radio"
                      value={1}
                    />
                    <span
                      aria-hidden="true"
                      className="c34"
                    />
                  </div>
                  <label
                    className="c35"
                    htmlFor="paid"
                    id="paid-label"
                  >
                    <span
                      className="c7 c36"
                    >
                      <span
                        className="c37"
                      >
                        Paid ($0.99/month)
                      </span>
                    </span>
                  </label>
                  <div
                    className="c15 c25 c38"
                    id="paid-description"
                  >
                    <span
                      className="c26"
                    >
                      Skip the ads, get special discounts, and more
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="c40"
        >
          <button
            aria-busy={false}
            className="c21 c41"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            type="submit"
          >
            <div
              className="c42"
            >
              <span
                className="c7 c43"
              >
                <span
                  className="c12"
                >
                  Save Changes
                </span>
              </span>
            </div>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/FormControl With Label 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  max-width: 320px;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: rgba(0,0,0,0.87);
  display: block;
}

.c3 *,
.c3 *::before,
.c3 *::after {
  box-sizing: border-box;
}

.c4 {
  font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
  font-size: 0.8125rem;
  font-weight: 700;
  line-height: 1.26584375rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.32965625rem);
  -ms-transform: translateY(0.32965625rem);
  transform: translateY(0.32965625rem);
  text-align: initial;
}

.c4::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.7593125rem;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: -0.015843750000000004rem;
}

.c5 *,
.c5 *::before,
.c5 *::after {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c2 {
  margin-bottom: 8px;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0 9px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.12);
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  cursor: text;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-family: inherit;
  font-size: 1rem;
  height: 44px;
  max-width: 100%;
  min-width: 0;
  outline: 1px solid gray;
  outline-color: transparent;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  width: 100%;
}

.c6 *,
.c6 *::before,
.c6 *::after {
  box-sizing: border-box;
}

.c6 input {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 0;
  color: currentColor;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  font-size: inherit;
  height: 100%;
  min-width: 0;
  opacity: 1;
  outline: none;
}

.c6 input *,
.c6 input *::before,
.c6 input *::after {
  box-sizing: border-box;
}

.c6 input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c6 input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c6 input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c6 input::placeholder {
  color: rgba(0,0,0,0.38);
  opacity: 1;
}

.c6:focus-within {
  border: 2px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.38);
  padding: 0 8px;
}

@supports selector(:-webkit-autofill) {
  .c6 input:-webkit-autofill,
  .c6 input:-webkit-autofill:hover,
  .c6 input:-webkit-autofill:focus,
  .c6 input:-webkit-autofill:active,
  .c6 input:-webkit-autofill::first-line {
    font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
    font-size: 1rem;
    -webkit-transition: background-color 1e9s ease-in-out 1e9s,color 1e9s ease-in-out 1e9s;
    transition: background-color 1e9s ease-in-out 1e9s,color 1e9s ease-in-out 1e9s;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <label
        className="c3 c4"
        htmlFor="form-control-with-label-story"
        id="form-control-with-label-story-label"
      >
        <span
          className="c5"
        >
          Email
        </span>
      </label>
    </div>
    <div
      className="c6"
    >
      <input
        aria-disabled={false}
        aria-errormessage={null}
        aria-invalid={false}
        aria-labelledby="form-control-with-label-story-label"
        aria-required={true}
        autoComplete="on"
        autoCorrect="off"
        autoFocus={false}
        disabled={false}
        id="form-control-with-label-story"
        name="email"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onInvalid={[Function]}
        required={true}
        type="email"
      />
    </div>
  </div>
</div>
`;
